# nano-vm-dev-agent

./: .env.example  .gitignore  README.md  _.env.example.txt  conftest.py  programs.py  pyproject.toml  pyproject.toml.txt  run_da2.py  run_da3.py  run_sieshka.py  runner.py  setup.sh
.github/workflows/: autofix.yml  ci.yml  log-activity.yml
agent/: programs.py  run_sieshka.py  runner.py  streaming_adapter.py  tools.py
tests/: conftest.py  test_agent.py  test_da4_transactional.py  test_fingerprint.py  test_runner_fingerprint.py  test_streaming_adapter.py
