[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nano-vm-dev-agent"
version = "0.2.1"
description = "Deterministic FSM agent for nano-vm sprint development"
requires-python = ">=3.10"
dependencies = [
    "llm-nano-vm>=0.8.0",
    "litellm>=1.0.0",
    "openai>=1.0.0",      # required by litellm for OpenRouter + Vibecode (OpenAI-compatible)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.0",
    "mypy>=1.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 30

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]
